--- a/IGP/app/src/main/AndroidManifest.xml
+++ b/IGP/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/ava"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
